# radar_topometric_localization

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  commands.sh
exps/: CMakeLists.txt  package.xml
exps/config/: lidar_config.yaml  radar_config.yaml  radar_lidar_config.yaml
exps/include/exps/: utils.hpp
exps/rviz/: lidar.rviz  radar.rviz  radar_lidar.rviz
exps/src/: lidar_localization.cpp  lidar_odometry.cpp  lidar_preprocessing.cpp  radar_lidar_localization.cpp  radar_localization.cpp  radar_odometry.cpp  radar_preprocessing.cpp
runtime/: run_eval.sh  run_parallel_test.sh  run_test.sh
runtime/config/: lidar_config.yaml  radar_config.yaml  radar_lidar_config.yaml
setup_scripts/: build_docker.sh  build_packages.sh  build_vtr3.sh  build_vtr_testing_radar.sh  create_venv.sh  dl_boreas_test.sh  renew_packages.sh  run_docker.sh  setup_container.sh
